--- a/404.md
+++ b/404.md
@@ -1,9 +1,9 @@
 ---
-layout: page
+layout: page-without-header
 title: "Page Not Found"
-description: "Page not found. Your pixels are in another canvas."
+description: "There is still a chance yet."
 ---  
-
+<br>
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
 
 <script type="text/javascript">
